// proto/product.proto
syntax = "proto3";

package product;

service ProductService {
  rpc GetProductBySlug(GetProductBySlugRequest) returns (ProductResponse);
  rpc GetProductById(GetProductByIdRequest) returns (ProductResponse);
  rpc GetVariantById(GetVariantByIdRequest) returns (VariantResponse);
  rpc GetVendorProduct(GetVendorProductRequest) returns (VendorProductResponse);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
  rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseStockResponse);
  rpc ConfirmStockDeduction(ConfirmStockDeductionRequest) returns (ConfirmStockDeductionResponse);
}

message GetProductBySlugRequest {
  string slug = 1;
}

message GetProductByIdRequest {
  string product_id = 1;
}

message ProductResponse {
  bool success = 1;
  Product product = 2;
  string error = 3;
}

message Product {
  string id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  double base_price = 5;
  string category_id = 6;
  string category_name = 7;
  bool is_published = 8;
  string status = 9;
  repeated Variant variants = 10;
  repeated VendorProductInfo vendor_products = 11;
}

message GetVariantByIdRequest {
  string variant_id = 1;
}

message VariantResponse {
  bool success = 1;
  Variant variant = 2;
  string error = 3;
}

message Variant {
  string id = 1;
  string product_id = 2;
  string name = 3;
  double base_price = 4;
  bool is_active = 5;
  repeated VariantOption options = 6;
}

message VariantOption {
  string name = 1;
  string value = 2;
}

message GetVendorProductRequest {
  string vendor_product_id = 1;
}

message VendorProductResponse {
  bool success = 1;
  VendorProductInfo vendor_product = 2;
  string error = 3;
}

message VendorProductInfo {
  string id = 1;
  string vendor_id = 2;
  string product_id = 3;
  double price = 4;
  double compare_at_price = 5;
  string currency = 6;
  int32 stock_quantity = 7;
  bool is_published = 8;
  string status = 9;
  string handling_time = 10;
  repeated VendorVariantInfo vendor_variants = 11;
}

message VendorVariantInfo {
  string id = 1;
  string variant_id = 2;
  double price = 3;
  int32 stock_quantity = 4;
  bool is_active = 5;
}

message CheckStockRequest {
  repeated StockCheckItem items = 1;
}

message StockCheckItem {
  string vendor_product_id = 1;
  string vendor_variant_id = 2;
  int32 quantity = 3;
}

message CheckStockResponse {
  bool success = 1;
  bool all_available = 2;
  repeated StockCheckResult results = 3;
  string error = 4;
}

message StockCheckResult {
  string vendor_product_id = 1;
  string vendor_variant_id = 2;
  int32 requested_quantity = 3;
  int32 available_quantity = 4;
  bool is_available = 5;
}

message ReserveStockRequest {
  string reservation_id = 1;
  repeated StockCheckItem items = 2;
  int32 ttl_seconds = 3;
}

message ReserveStockResponse {
  bool success = 1;
  string reservation_id = 2;
  string expires_at = 3;
  string error = 4;
}

message ReleaseStockRequest {
  string reservation_id = 1;
}

message ReleaseStockResponse {
  bool success = 1;
  string error = 2;
}

message ConfirmStockDeductionRequest {
  string reservation_id = 1;
}

message ConfirmStockDeductionResponse {
  bool success = 1;
  string error = 2;
}